--- a/main.html
+++ b/main.html
@@ -13,4 +13,17 @@
 
 </body>
 
+	<div>
+		<p><b>What is the captial of India?</b></p>
+		<input id="delhi" type="radio" name="capital">
+		<label for"delhi">New Delhi</label>
+		<br>
+		<input id="mumbai" type="radio" name="capital">
+		<label for"mumbai">Mumbai</label>
+	</div>
+
+	<blockquote>
+        "New Delhi is the capital of India and an administrative district of NCT Delhi." - <cite>https://en.wikipedia.org/wiki/New_Delhi</cite>
+    </blockquote>
+
 </html>
