--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 </body>
 
 	<div>
-		<p><b>What is the captial of India?</b></p>
+		<h1>What is the capital of India?</h1>
 		<input id="delhi" type="radio" name="capital">
 		<label for"delhi">New Delhi</label>
 		<br>
@@ -23,7 +23,8 @@
 	</div>
 
 	<blockquote>
-        "New Delhi is the capital of India and an administrative district of NCT Delhi." - <cite>https://en.wikipedia.org/wiki/New_Delhi</cite>
+        <p>New Delhi is the capital of India and an administrative district of NCT Delhi.</p>
+		<cite>https://en.wikipedia.org/wiki/New_Delhi</cite>
     </blockquote>
 
 </html>
