--- a/main.html
+++ b/main.html
@@ -22,9 +22,8 @@
 		<label for"mumbai">Mumbai</label>
 	</div>
 
-	<blockquote>
-        <p>New Delhi is the capital of India and an administrative district of NCT Delhi.</p>
-		<cite>https://en.wikipedia.org/wiki/New_Delhi</cite>
+	<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi" >
+        New Delhi is the capital of India and an administrative district of NCT Delhi.
     </blockquote>
 
 </html>
